--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,18 @@
 <resources>
     <string name="app_name">MosbyMail</string>
 
+    <string name="empty"></string>
     <string name="username">Username</string>
     <string name="email_address">Email Address</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="login">Login</string>
+    <string name="logout">Logout</string>
     <string name="sign_up">Sign Up</string>
     <string name="success">Success</string>
     <string name="loading">Loading</string>
+    <string name="home">Home</string>
+    <string name="please_wait">Please wait&#8230;</string>
+    <string name="field_required">This field is required</string>
+    <string name="login_error">Invalid username or password.</string>
 </resources>
