Home and Create Post

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="please_wait">Please wait&#8230;</string>
     <string name="field_required">This field is required</string>
     <string name="login_error">Invalid username or password.</string>
+    <string name="image_filename_format">JPEG_%1$s_</string>
+    <string name="image_filename_ext">.jpg</string>
+    <string name="error_dialog_title">Error</string>
+    <string name="error_dialog_message">An error occurred, please try again.</string>
+    <string name="ok">OK</string>
+    <string name="title">Title</string>
+    <string name="create_post">Create Post</string>
+    <string name="post_created_successfully">Post created successfully!</string>
+    <string name="creating_post">Creating post&#8230;</string>
 </resources>
