--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,16 @@
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="sign_up">Sign Up</string>
+    <string name="display_name">Display Name</string>
+    <string name="login_no_account">I don\'t have an account.</string>
     <string name="success">Success</string>
     <string name="loading">Loading</string>
     <string name="home">Home</string>
     <string name="please_wait">Please wait&#8230;</string>
     <string name="field_required">This field is required</string>
+    <string name="password_no_match">Passwords don\'t match</string>
     <string name="login_error">Invalid username or password.</string>
+    <string name="signup_error">Username already in use.</string>
     <string name="image_filename_format">JPEG_%1$s_</string>
     <string name="image_filename_ext">.jpg</string>
     <string name="error_dialog_title">Error</string>
